# LineBot_THSR

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml  requirements.txt
core/: settings.py  urls.py
thsr_bot/: apps.py  views.py
